# ethz-course-2026

hw1_pytorch_tutorial/src/: ex1.ipynb  ex2.ipynb  ex3.ipynb
hw2_robot_control_mdps/: pyproject.toml
hw2_robot_control_mdps/exercises/: ex1.py  ex2.py  ex3.py
hw2_robot_control_mdps/scripts/: inverse_kinematics.py  quintic_splines.py  train.py
