[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "so101_gym"
version = "0.1.0"
description = "SO-101 robot simulation gym environment"
requires-python = ">=3.11"
dependencies = [
    "gymnasium==1.2.3",
    "mujoco==3.5.0",
    "numpy==2.4.2",
    "scipy>=1.17.1",
    "setuptools==69.5.1",
    "stable-baselines3==2.7.1",
    "tensorboard==2.20.0",
    "torch>=2.12.1",
]

[tool.setuptools.packages.find]
include = ["so101_gym*"]

[tool.setuptools.package-data]
so101_gym = ["assets/**/*"]
